<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dashboard"
    tools:context=".OnboardActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="56dp"
        android:src="@drawable/mylogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/gambar" />

    <TextView
        android:id="@+id/peworld"
        android:layout_width="235dp"
        android:layout_height="42dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="64dp"
        android:gravity=""
        android:text="@string/peworld"
        android:textAppearance="@style/peworld"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.188"
        app:layout_constraintStart_toEndOf="@+id/logo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/temukan_dev"
        android:layout_width="343dp"
        android:layout_height="216dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="108dp"
        android:gravity="top"
        android:lineSpacingExtra="8sp"
        android:text="@string/temukan_dev"
        android:textAppearance="@style/temukan_dev"
        android:translationY="-3.85sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/peworld" />

    <RelativeLayout
        android:onClick="engineers"
        android:id="@+id/rectangle_3"
        android:layout_width="343dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="56dp"
        android:background="@drawable/rectangle_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temukan_dev">

        <TextView
            android:id="@+id/daftar_boot"
            android:layout_width="339dp"
            android:layout_height="35dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="4dp"
            android:gravity="center"
            android:lineSpacingExtra="0sp"
            android:text="@string/daftar_boot"
            android:textAlignment="center"
            android:textAppearance="@style/daftar_boot"
            tools:ignore="RtlCompat" />
    </RelativeLayout>

    <View
        android:id="@+id/line_9"
        android:layout_width="152dp"
        android:layout_height="2dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp"
        android:background="@drawable/line_9"
        app:layout_constraintEnd_toStartOf="@+id/atau"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_3" />

    <View
        android:id="@+id/line_"
        android:layout_width="152dp"
        android:layout_height="2dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp"
        android:background="@drawable/line_9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toEndOf="@+id/atau"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_3" />

    <TextView
        android:id="@+id/atau"
        android:layout_width="44dp"
        android:layout_height="29dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:gravity="top"
        android:text="@string/atau"
        android:textAppearance="@style/atau"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_3"
        tools:ignore="MissingConstraints" />

    <RelativeLayout
        android:onClick="Company"
        android:id="@+id/btn_company"
        android:layout_width="343dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:textAlignment="center"
        android:layout_marginTop="28dp"
        android:background="@drawable/rectangle1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/atau" >

        <TextView
            android:id="@+id/tv_engineer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="0dp"
            android:gravity="top"
            android:lineSpacingExtra="0sp"
            android:text="@string/daftar_boot1"
            android:textAlignment="center"
            android:textAppearance="@style/daftar_boot1"
            tools:ignore="RtlCompat" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>